# uni-lfa-lab

./: CMakeLists.txt
src/: automaton.cpp  automaton.hpp  dfa.cpp  dfa.hpp  lnfa.cpp  lnfa.hpp  lnfa_verify.cpp  main.cpp  minimize_dfa.cpp  nfa.cpp  nfa.hpp  nfa2dfa.cpp  utils.hpp
